--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,8 +5,15 @@ repository: https://github.com/serverpod/system_resources_2
 homepage: https://github.com/serverpod/system_resources_2#readme
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: ">=3.5.0 <4.0.0"
+
+dependencies:
+  ffi: ^2.1.0
 
 dev_dependencies:
-  pedantic: ^1.9.0
-  test: ^1.19.5
+  hooks: ^1.0.0
+  code_assets: ^1.0.0
+  native_toolchain_c: ^0.17.0
+  logging: ^1.2.0
+  test: ^1.25.0
+  lints: ^5.0.0
