revert: use pre-compiled binaries instead of native assets
Native assets (Dart's experimental feature for automatic C compilation)
is not available on the stable Dart channel and requires:
- The --enable-experiment=native-assets flag
- A C compiler (clang) at build time
- Build tools in Docker images

This makes deployment complex and limits usability. Reverting to the
traditional DynamicLibrary.open() approach with pre-compiled binaries
provides a simpler, more reliable solution that works on stable Dart.

Changes:
- Add pre-compiled .so/.dylib binaries to lib/build/ for all platforms
- Rewrite lib/src/base.dart to use DynamicLibrary.open() with smart
  path resolution (checks executable dir, lib/build/, pub cache)
- Update .gitignore to allow binary files in lib/build/
- Simplify Dockerfile (no C compiler required)
- Remove hook/build.dart (native assets build hook)
- Remove native_assets.yaml.example
- Remove native assets dev dependencies from pubspec.yaml
- Update README with simpler usage instructions

Supported platforms:
- Linux: x86_64, aarch64, armv7l, i686
- macOS: arm64, x86_64

This approach:
- Works on stable Dart (no experimental flags)
- No C compiler required at build time
- Simpler Docker images and faster builds
- Works immediately after dart pub get

--- a/.gitignore
+++ b/.gitignore
@@ -38,10 +38,11 @@ doc/api/
 *.lo
 
 # Shared objects (inc. Windows DLLs)
-*.dll
-*.so
-*.so.*
-*.dylib
+# NOTE: We keep pre-compiled binaries in lib/build/ for distribution
+# *.dll
+# *.so
+# *.so.*
+# *.dylib
 
 # Executables
 *.exe
