build: use native arch detection in Makefile
Replace uname with GCC predefined macros for OS/arch detection.
Add architecture-specific build directories to prevent cross-arch
build conflicts. Update .gitignore to exclude obj/ directory.

--- a/.gitignore
+++ b/.gitignore
@@ -69,3 +69,5 @@ dkms.conf
 
 # End of https://www.toptal.com/developers/gitignore/api/c
 
+# Build artifacts (arch-specific object files)
+lib/build/obj/
