feat(ci): add automated native binary rebuild workflow
Add CI/CD infrastructure to automatically rebuild native binaries when C
source files change in PRs:
- Detect source changes in lib/src/libsysres/*.{c,h}
- Build macOS binaries on native runners (arm64, x86_64)
- Build Linux binaries via Docker + QEMU (x86_64, aarch64, armv7l)
- Build i686 via cross-compilation with gcc -m32
- Auto-commit rebuilt binaries and post checksums to PR
Also add Makefile targets for local Docker-based builds and move
Dockerfiles to ci/ directory for better organization.

--- a/ci/Dockerfile.test
+++ b/ci/Dockerfile.test
@@ -1,7 +1,7 @@
 # Dockerfile for testing system_resources with container-aware features
 #
 # Container-aware testing:
-# Build:  docker build -t system_resources_test .
+# Build:  docker build -f ci/Dockerfile.test -t system_resources_test .
 # Run with limits: docker run --memory=256m --cpus=0.5 system_resources_test
 #
 # Expected output when running with limits:
