--- a/.github/workflows/build-binaries.yml
+++ b/.github/workflows/build-binaries.yml
@@ -64,7 +64,7 @@ jobs:
     name: Build darwin-x86_64
     needs: check-source-changed
     if: needs.check-source-changed.outputs.changed == 'true'
-    runs-on: macos-13
+    runs-on: macos-15-intel
     steps:
       - uses: actions/checkout@v4
 
