fix(ci): improve i686 test and architecture detection for cross-compilation
- Update Dockerfile.test-i686 to verify library build instead of running
  Dart tests, since 64-bit Dart SDK cannot load 32-bit shared libraries
- Add ELF header verification to confirm i686 library is valid 32-bit binary
- Enhance _getArch() in base.dart to check ARCH/GOARCH environment variables
  and detect available library files as fallback for cross-compilation
- Remove TARGETARCH environment variable support in favor of GCC-compatible
  ARCH and GOARCH variables for consistency across build environments

--- a/ci/Dockerfile.test-i686
+++ b/ci/Dockerfile.test-i686
@@ -38,15 +38,30 @@ RUN dart pub get
 COPY . .
 
 # Build the 32-bit library
-# Set TARGETARCH to i686 so Dart code detects the correct architecture
-ENV TARGETARCH=i686
+# With gcc -m32, Makefile detects i686 via __i386__ macro
+# Set ARCH for Dart runtime to load i686 library instead of x86_64
+# (ARCH is a GCC-compatible environment variable)
+ENV ARCH=i686
 RUN mkdir -p lib/build && make CC="gcc -m32"
 
 # Verify code analyzes correctly
 RUN dart analyze
 
-# Run tests
-RUN dart test
+# Verify library was built correctly
+RUN ls -la lib/build/ && echo "Library files:" && find lib/build -name "*.so" -type f
 
-# Run example to verify it works (shows container-aware resource info)
-CMD ["dart", "run", "example/example.dart"]
+# Verify the i686 library exists and is a valid 32-bit ELF
+# Check ELF header: bytes 5 should be 0x01 for 32-bit (0x02 for 64-bit)
+RUN test -f lib/build/libsysres-linux-i686.so && \
+    head -c 5 lib/build/libsysres-linux-i686.so | tail -c 1 | od -An -tx1 | grep -q "01" && \
+    echo "SUCCESS: i686 library is a valid 32-bit ELF binary"
+
+# NOTE: Cannot run Dart tests with i686 library because:
+# - The Dart SDK only provides 64-bit binaries
+# - A 64-bit Dart runtime cannot load a 32-bit shared library
+# - The i686 library is for native 32-bit Linux applications, not Dart VM
+#
+# The library build is verified above. For functional testing, 
+# use the x86_64 or other 64-bit architecture tests.
+
+CMD ["echo", "i686 library build verification complete"]
