--- a/ci/Dockerfile.build
+++ b/ci/Dockerfile.build
@@ -3,6 +3,12 @@
 # This Dockerfile is used to build the native library for different
 # Linux architectures using Docker's multi-platform support.
 #
+# Uses gcc:10 (Debian buster, glibc 2.28) which produces binaries requiring
+# only glibc 2.7, providing broad compatibility with:
+# - Ubuntu 14.04+ (glibc 2.19)
+# - Debian 8+ (glibc 2.19)
+# - CentOS 7+ / RHEL 7+ (glibc 2.17)
+#
 # Usage (local development):
 #   # Build for current platform
 #   docker build -f ci/Dockerfile.build -o lib/build .
@@ -15,7 +21,7 @@
 #     docker build --platform $p -f ci/Dockerfile.build -o lib/build .
 #   done
 
-FROM gcc:latest AS builder
+FROM gcc:10 AS builder
 
 WORKDIR /app
 
