--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,6 +7,10 @@ on:
   pull_request:
     branches: [main, master]
 
+# Hybrid implementation:
+# - Linux: Pure Dart (no native libraries needed)
+# - macOS: FFI with pre-built dylibs
+
 jobs:
   analyze:
     runs-on: ubuntu-latest
@@ -18,18 +22,35 @@ jobs:
       - run: dart pub get
       - run: dart analyze
 
-  test-native:
-    name: test-native (${{ matrix.name }})
+  # Test on Linux (pure Dart - no native build needed)
+  test-linux:
+    name: test-linux (${{ matrix.name }})
     strategy:
       matrix:
         include:
-          - name: linux-amd64
+          - name: amd64
             os: ubuntu-latest
-          - name: linux-arm64
+          - name: arm64
             os: ubuntu-24.04-arm
-          - name: macos-arm64
+    runs-on: ${{ matrix.os }}
+    steps:
+      - uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd # v6.0.2
+      - uses: dart-lang/setup-dart@e51d8e571e22473a2ddebf0ef8a2123f0ab2c02c # v1.7.1
+        with:
+          sdk: stable
+      # No 'make' needed - Linux uses pure Dart
+      - run: dart pub get
+      - run: dart test
+
+  # Test on macOS (FFI with pre-built dylibs)
+  test-macos:
+    name: test-macos (${{ matrix.name }})
+    strategy:
+      matrix:
+        include:
+          - name: arm64
             os: macos-latest
-          - name: macos-intel
+          - name: intel
             os: macos-15-intel
     runs-on: ${{ matrix.os }}
     steps:
@@ -37,11 +58,11 @@ jobs:
       - uses: dart-lang/setup-dart@e51d8e571e22473a2ddebf0ef8a2123f0ab2c02c # v1.7.1
         with:
           sdk: stable
-      - name: Build native library
-        run: make
+      # dylibs are pre-built and committed in lib/build/
       - run: dart pub get
       - run: dart test
 
+  # Test in Docker containers (Linux pure Dart)
   test-container:
     name: test-container (${{ matrix.arch }})
     strategy:
@@ -53,9 +74,6 @@ jobs:
           - arch: arm64
             platform: linux/arm64
             qemu: arm64
-          - arch: armv7l
-            platform: linux/arm/v7
-            qemu: arm
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd # v6.0.2
@@ -78,23 +96,3 @@ jobs:
           push: false
           cache-from: type=gha,scope=${{ matrix.arch }}
           cache-to: type=gha,mode=max,scope=${{ matrix.arch }}
-
-  test-container-i686:
-    name: test-container (i686)
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd # v6.0.2
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@8d2750c68a42422c14e847fe6c8ac0403b4cbd6f # v3.12.0
-
-      - name: Build and test
-        uses: docker/build-push-action@263435318d21b8e681c14492fe198d362a7d2c83 # v6.18.0
-        with:
-          context: .
-          file: ci/Dockerfile.test-i686
-          platforms: linux/amd64
-          push: false
-          cache-from: type=gha,scope=i686
-          cache-to: type=gha,mode=max,scope=i686
-
