--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,22 +7,82 @@ on:
   pull_request:
     branches: [main, master]
 
-# Hybrid implementation:
-# - Linux: Pure Dart (no native libraries needed)
-# - macOS: FFI with pre-built dylibs
-
 jobs:
+  check-source-changed:
+    name: Check if native source changed
+    if: github.event_name == 'pull_request'
+    runs-on: ubuntu-latest
+    outputs:
+      changed: ${{ steps.check.outputs.changed }}
+    steps:
+      - uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd  # v6.0.2
+        with:
+          fetch-depth: 0
+
+      - name: Check for source or build-config changes
+        id: check
+        run: |
+          # Skip if last commit was an auto-rebuild (prevents loops).
+          LAST_MSG=$(git log -1 --format='%s')
+          if [ "$LAST_MSG" = "chore: rebuild macOS native binaries" ]; then
+            echo "changed=false" >> $GITHUB_OUTPUT
+            exit 0
+          fi
+
+          CHANGED_FILES=$(git diff --name-only origin/${{ github.base_ref }}...HEAD)
+          echo "Changed files:"
+          echo "$CHANGED_FILES"
+
+          if echo "$CHANGED_FILES" | grep -qE '^lib/src/libsysres/.*\.(c|h)$'; then
+            echo "changed=true" >> $GITHUB_OUTPUT
+          elif echo "$CHANGED_FILES" | grep -qE '^ci/Dockerfile\.build'; then
+            echo "changed=true" >> $GITHUB_OUTPUT
+          elif echo "$CHANGED_FILES" | grep -qE '^Makefile$'; then
+            echo "changed=true" >> $GITHUB_OUTPUT
+          elif echo "$CHANGED_FILES" | grep -qE '^lib/build/libsysres-darwin'; then
+            echo "changed=true" >> $GITHUB_OUTPUT
+          else
+            echo "changed=false" >> $GITHUB_OUTPUT
+          fi
+
+  build-darwin-arm64:
+    name: Build darwin-arm64
+    needs: check-source-changed
+    if: needs.check-source-changed.outputs.changed == 'true'
+    runs-on: macos-latest
+    steps:
+      - uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd  # v6.0.2
+      - run: make
+      - uses: actions/upload-artifact@b7c566a772e6b6bfb58ed0dc250532a479d7789f  # v6.0.0
+        with:
+          name: libsysres-darwin-arm64
+          path: lib/build/libsysres-darwin-arm64.dylib
+          retention-days: 1
+
+  build-darwin-x86_64:
+    name: Build darwin-x86_64
+    needs: check-source-changed
+    if: needs.check-source-changed.outputs.changed == 'true'
+    runs-on: macos-15-intel
+    steps:
+      - uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd  # v6.0.2
+      - run: make
+      - uses: actions/upload-artifact@b7c566a772e6b6bfb58ed0dc250532a479d7789f  # v6.0.0
+        with:
+          name: libsysres-darwin-x86_64
+          path: lib/build/libsysres-darwin-x86_64.dylib
+          retention-days: 1
+
   analyze:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd # v6.0.2
-      - uses: dart-lang/setup-dart@e51d8e571e22473a2ddebf0ef8a2123f0ab2c02c # v1.7.1
+      - uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd  # v6.0.2
+      - uses: dart-lang/setup-dart@e51d8e571e22473a2ddebf0ef8a2123f0ab2c02c  # v1.7.1
         with:
           sdk: stable
       - run: dart pub get
       - run: dart analyze
 
-  # Test on Linux (pure Dart - no native build needed)
   test-linux:
     name: test-linux (${{ matrix.name }})
     strategy:
@@ -34,35 +94,45 @@ jobs:
             os: ubuntu-24.04-arm
     runs-on: ${{ matrix.os }}
     steps:
-      - uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd # v6.0.2
-      - uses: dart-lang/setup-dart@e51d8e571e22473a2ddebf0ef8a2123f0ab2c02c # v1.7.1
+      - uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd  # v6.0.2
+      - uses: dart-lang/setup-dart@e51d8e571e22473a2ddebf0ef8a2123f0ab2c02c  # v1.7.1
         with:
           sdk: stable
-      # No 'make' needed - Linux uses pure Dart
       - run: dart pub get
       - run: dart test
 
-  # Test on macOS (FFI with pre-built dylibs)
   test-macos:
     name: test-macos (${{ matrix.name }})
+    needs: [check-source-changed, build-darwin-arm64, build-darwin-x86_64]
+    # always() so this still runs when build jobs were skipped (no source change / push event).
+    if: >-
+      always() && !cancelled() && needs.build-darwin-arm64.result != 'failure' && needs.build-darwin-x86_64.result != 'failure'
     strategy:
       matrix:
         include:
           - name: arm64
             os: macos-latest
+            artifact: libsysres-darwin-arm64
           - name: intel
             os: macos-15-intel
+            artifact: libsysres-darwin-x86_64
     runs-on: ${{ matrix.os }}
     steps:
-      - uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd # v6.0.2
-      - uses: dart-lang/setup-dart@e51d8e571e22473a2ddebf0ef8a2123f0ab2c02c # v1.7.1
+      - uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd  # v6.0.2
+      - uses: dart-lang/setup-dart@e51d8e571e22473a2ddebf0ef8a2123f0ab2c02c  # v1.7.1
         with:
           sdk: stable
-      # dylibs are pre-built and committed in lib/build/
+
+      - name: Download rebuilt binary
+        if: needs.check-source-changed.outputs.changed == 'true'
+        uses: actions/download-artifact@37930b1c2abaa49bbe596cd826c3c89aef350131  # v7.0.0
+        with:
+          name: ${{ matrix.artifact }}
+          path: lib/build/
+
       - run: dart pub get
       - run: dart test
 
-  # Test in Docker containers (Linux pure Dart)
   test-container:
     name: test-container (${{ matrix.arch }})
     strategy:
@@ -76,19 +146,19 @@ jobs:
             qemu: arm64
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd # v6.0.2
+      - uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd  # v6.0.2
 
       - name: Set up QEMU
         if: matrix.qemu != ''
-        uses: docker/setup-qemu-action@c7c53464625b32c7a7e944ae62b3e17d2b600130 # v3.7.0
+        uses: docker/setup-qemu-action@c7c53464625b32c7a7e944ae62b3e17d2b600130  # v3.7.0
         with:
           platforms: ${{ matrix.qemu }}
 
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@8d2750c68a42422c14e847fe6c8ac0403b4cbd6f # v3.12.0
+        uses: docker/setup-buildx-action@8d2750c68a42422c14e847fe6c8ac0403b4cbd6f  # v3.12.0
 
       - name: Build and test
-        uses: docker/build-push-action@263435318d21b8e681c14492fe198d362a7d2c83 # v6.18.0
+        uses: docker/build-push-action@263435318d21b8e681c14492fe198d362a7d2c83  # v6.18.0
         with:
           context: .
           file: ci/Dockerfile.test
@@ -96,3 +166,69 @@ jobs:
           push: false
           cache-from: type=gha,scope=${{ matrix.arch }}
           cache-to: type=gha,mode=max,scope=${{ matrix.arch }}
+
+  commit-binaries:
+    name: Commit binaries and post checksums
+    needs:
+      - check-source-changed
+      - build-darwin-arm64
+      - build-darwin-x86_64
+    if: needs.check-source-changed.outputs.changed == 'true'
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+      pull-requests: write
+    steps:
+      - uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd  # v6.0.2
+        with:
+          ref: ${{ github.head_ref }}
+          fetch-depth: 0
+
+      - uses: actions/download-artifact@37930b1c2abaa49bbe596cd826c3c89aef350131  # v7.0.0
+        with:
+          path: artifacts
+
+      - name: Copy binaries to lib/build
+        run: |
+          mkdir -p lib/build
+          cp artifacts/libsysres-darwin-arm64/libsysres-darwin-arm64.dylib lib/build/
+          cp artifacts/libsysres-darwin-x86_64/libsysres-darwin-x86_64.dylib lib/build/
+
+      - name: Compute checksums
+        id: checksums
+        run: |
+          cd lib/build
+          md5sum libsysres-darwin-* | sort > checksums.md5
+          cat checksums.md5
+          echo "checksums<<EOF" >> $GITHUB_OUTPUT
+          cat checksums.md5 >> $GITHUB_OUTPUT
+          echo "EOF" >> $GITHUB_OUTPUT
+
+      - uses: stefanzweifel/git-auto-commit-action@04702edda442b2e678b25b537cec683a1493fcb9  # v7.1.0
+        with:
+          commit_message: "chore: rebuild macOS native binaries"
+          file_pattern: "lib/build/*.dylib lib/build/checksums.md5"
+
+      - name: Post PR comment with checksums
+        uses: actions/github-script@ed597411d8f924073f98dfc5c65a23a2325f34cd  # v8.0.0
+        with:
+          script: |
+            const checksums = `${{ steps.checksums.outputs.checksums }}`;
+            const body = `## macOS Binaries Rebuilt
+
+            The macOS native binaries have been automatically rebuilt from source.
+            Linux uses pure Dart implementation (no native binaries needed).
+
+            ### MD5 Checksums
+            \`\`\`
+            ${checksums}
+            \`\`\`
+
+            These checksums can be used to verify the provenance of the binaries.`;
+
+            await github.rest.issues.createComment({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              issue_number: context.issue.number,
+              body: body
+            });
