--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -209,26 +209,24 @@ jobs:
           commit_message: "chore: rebuild macOS native binaries"
           file_pattern: "lib/build/*.dylib lib/build/checksums.md5"
 
+      - name: Write PR comment body
+        run: |
+          cat > /tmp/pr-comment.md << 'COMMENT'
+          ## macOS Binaries Rebuilt
+
+          The macOS native binaries have been automatically rebuilt from source.
+          Linux uses pure Dart implementation (no native binaries needed).
+
+          ### MD5 Checksums
+          ```
+          ${{ steps.checksums.outputs.checksums }}
+          ```
+
+          These checksums can be used to verify the provenance of the binaries.
+          COMMENT
+
       - name: Post PR comment with checksums
-        uses: actions/github-script@ed597411d8f924073f98dfc5c65a23a2325f34cd  # v8.0.0
+        uses: thollander/actions-comment-pull-request@65f9e5c9a1f2cd378bd74b2e057c9736982a8e74  # v3
         with:
-          script: |
-            const checksums = `${{ steps.checksums.outputs.checksums }}`;
-            const body = `## macOS Binaries Rebuilt
-
-            The macOS native binaries have been automatically rebuilt from source.
-            Linux uses pure Dart implementation (no native binaries needed).
-
-            ### MD5 Checksums
-            \`\`\`
-            ${checksums}
-            \`\`\`
-
-            These checksums can be used to verify the provenance of the binaries.`;
-
-            await github.rest.issues.createComment({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              issue_number: context.issue.number,
-              body: body
-            });
+          comment-tag: macos-binaries
+          file-path: /tmp/pr-comment.md
